# stroked

./: .gitignore  PACKAGING_INSTRUCTIONS.md  README.md  meson.build  requirements.txt
build_aux/: meson_post_conf.py  meson_post_install.py
catalog/: stroked.xml
data/: meson.build  space.autre.stroked.appdata.xml.in.in  space.autre.stroked.desktop  space.autre.stroked.desktop.in  space.autre.stroked.gresource.xml  space.autre.stroked.gschema.xml  stroked_glade_catalog.xml
data/ui/: export_dialog.ui  font_info_window.ui  glyph_list.ui  master_stack_item.ui  menubar.ui  panels.ui  simple_dialogs.ui  tabs.ui  window.ui
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES.in  stroked.pot
stroked/: __main__.py  app.py  resources.py  settings.py  window.py
stroked/converters/ufo2svg/: __init__.py  fontface_attrib.py  glyph_attrib.py  ufo2svg.py
stroked/data/: stroked.gresource.xml  stroked_glade_catalog.xml
stroked/data/interface/: canvas_settings.glade  menubar.glade  window.glade
stroked/data/ui/: export_dialog.ui  font_info_dialog.ui  font_info_window.ui  glyph_item.ui  glyph_list.ui  instance_stack_item.ui  master_stack_item.ui  menubar.ui  panels.ui  simple_dialogs.ui  window.ui
stroked/font/: __init__.py  contour.py  font.py  glyph.py  layer_set.py  point.py
stroked/pens/: __init__.py  cairo_pen.py  stroked_point_pen.py  svg_pen.py
stroked/tools/: __init__.py  base_tool.py  helpers.py  pen_tool.py  select_tool.py
stroked/ui/: __init__.py  canvas.py  dialogs.py  entries.py  glyph_list.py  tabs.py  toolbar.py
stroked/ui/dialogs/: __init__.py  export.py  font_info.py  simple_dialogs.py
stroked/ui/panels/: __init__.py  glyph_infos.py
